# langchain-huggingGPT

./: .gitignore  LICENSE  README.md  app.py  logging-config.toml  main.py  pyproject.toml  requirements.txt
hugginggpt/: __init__.py  exceptions.py  get_token_ids.py  history.py  huggingface_api.py  llm_factory.py  log.py  model_factory.py  model_inference.py  model_scraper.py  model_selection.py  resources.py  response_generation.py  task_parsing.py  task_planning.py
resources/: banner.txt  huggingface-models-metadata.jsonl  smoke-test-banner.txt
resources/audios/: 499e.flac
resources/prompt-templates/: model-selection-prompt.json  openai-model-inference-prompt.json  response-generation-prompt.json  task-planning-example-prompt.json  task-planning-examples.json  task-planning-few-shot-prompt.json  task-planning-prompt.json
tests/: smoke_test.py  test_model_inference.py  test_model_scraper.py  test_model_selection.py  test_resources.py  test_response_generation.py  test_task_parsing.py  test_task_planning.py
tests/helpers/: utils.py
tests/resources/: model-selection-completion.txt  response-generation.txt  task-planning-chat.json  task-planning-completion.txt
tests/resources/audios/: b6b7.flac
